
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-01-04 DP  1.6.2  Refresh database objects correctly, per Guy Rouillier.
2006-12-28 DP  1.6.2  Avoid displaying multi line data in single line list 
                      controls, per Clodoaldo Pinto Neto
2006-12-15 DP  1.6.2  Properly drop foreign keys in schemas whose names require
                      quoting, per M S.
2006-12-14 DP  1.6.2  Avoid a crash when closing the query tool on Solaris
                      [Dhanaraj M]
2006-12-07 DP  1.6.2  Reverse engineer columns with multi-word names (like
                      'timestamp with timezone') correctly so that precision
                      and array modifiers are included properly. Per Erwin.
2006-12-07 DP  1.6.2  Add '...' to truncated column comments in table SQL, per
                      Erwin Brandstetter.
2006-12-05 DP  1.6.2  Properly size the backup dialog, per Patrick Headley.
2006-12-05 DP  1.6.2  Ensure column headers and the insert row are shown in the
                      edit grid when no rows exist in the table being editted,
                      per Bob Pawley.
2006-12-05 DP  1.6.2  Restore dialog sizes correctly.
2006-12-04 DP  1.6.2  Build against PostgreSQL 8.2 on Windows
2006-12-01 DP  1.6.2  Fix some oddities in the way current per-table vacuum
                      settings are displayed
2006-12-01 DP  1.6.2  Fix per-table autovacuum settings for PostgreSQL >= 8.2
                      per Devrim Gunduz
2006-12-01 DP  1.6.2  Prevent the filter/sort options dialogue being opened
                      when data is being refreshed, per Erwin
2006-11-29 DP  1.6.1  Prevent a crash from the query too when using File -> 
                      Exit on GTK