@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-01-04 DP  1.6.2  Enable the OK button on the database properties dialog
+                      when variables are changed.
 2007-01-04 DP  1.6.2  Refresh database objects correctly, per Guy Rouillier.
 2006-12-28 DP  1.6.2  Avoid displaying multi line data in single line list 
                       controls, per Clodoaldo Pinto Neto
